# Drag-n-Share

./: README.md  docker-compose.yml  start.sh  test.html  ws_test.html
api/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.trns  Dockerfile.trns.dev  README.md
api/src/: api.rs  main.rs  redis_handler.rs  transmittor.rs  utils.rs
api/src/lib/: redis_handler.rs  utils.rs
app/: .gitignore  README.md  pubspec.yaml
app/.dart_tool/: package_config.json  package_config_subset
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  routes.dart  theme.dart
app/lib/i18n/: de_DE.json  en_US.json
app/lib/overview/: overview_screen.dart
app/lib/shared/: error.dart  loading.dart  shared.dart
app/lib/splash/: splash_screen.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
database/: Dockerfile  README.md
nginx/: Dockerfile  Dockerfile.dev  nginx.conf  nginx.dev.conf
web_app/: .env  .gitignore  Dockerfile  Dockerfile.dev  bun.lockb  error.vue  nuxt.config.ts  package.json  sentry.client.config.ts
web_app/assets/css/: tailwind.css
web_app/components/: DropArea.vue  File.vue  HoverButton.vue  SubtleButton.vue  UploadButton.vue
web_app/layouts/: default.vue
web_app/pages/: [sessionId].vue  [sessionName].vue  index.vue
web_app/pages/join/: [sessionId].vue
web_app/public/css/: materialIcons.css
(+21 files in other folders)
