[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }

axum-client-ip = "0.6.0"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

redis = { version = "0.26.1", features = ["tokio-comp", "connection-manager"] }

dotenvy = "0.15.7"

rand = "0.8.5"

sha256 = "1.5.0"

uuid = { version = "1.10.0" , features = ["v4", "fast-rng"] }