[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "transmittor"
path = "src/transmittor.rs"

[lib]
name = "utils"
path = "src/lib/utils.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.40.0", features = ["full"] }

futures-util = "0.3.30"
tokio-stream = "0.1.16"
tokio-tungstenite = "0.24.0"

tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"

axum-client-ip = "0.6.0"

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

redis = { version = "0.26.1", features = ["tokio-comp", "connection-manager"] }

dotenvy = "0.15.7"

log = "0.4.22"
env_logger = "0.11.5"

rand = "0.8.5"

sha256 = "1.5.0"

uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

jsonwebtoken = "9.3.0"
